# wsautofill

./: CMakeLists.txt  params.yaml
include/: structs.h
src/: main.cpp
